--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,12 +15,12 @@
         <a href="/">The Tech Blog</a>
       </h1>
       <nav>
-        {{!-- {{#if loggedIn}} --}}
-        {{!-- <a href="/dashboard">dashboard</a>
-        <button id="logout" class="btn-no-style">logout</button> --}}
-        {{!-- {{else}} --}}
-        {{!-- <a href="/login">login</a> --}}
-        {{!-- {{/if}} --}}
+        {{#if loggedIn}}
+        <a href="/dashboard">dashboard</a>
+        <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
       </nav>
     </header>
     <main>
@@ -31,9 +31,9 @@
     </footer>
   </div>
   
-  {{!-- {{#if loggedIn}}
+  {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
-  {{/if}} --}}
+  {{/if}}
 </body>
 
 </html>
