--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,33 +4,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just Tech News</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <div class="wrapper">
-    <header>
-      <h1>
-        <a href="/">The Tech Blog</a>
-      </h1>
-      <nav>
+  <header>
+    <div class="title">
+      <div>
+        <h1>Tech Blog</h1>
+      </div>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/dashboard">Dashboard</a></li>
         {{#if loggedIn}}
-        <a href="/dashboard">dashboard</a>
-        <button id="logout" class="btn-no-style">logout</button>
+        <li id="logout">Log Out</li>
         {{else}}
-        <a href="/login">login</a>
+        <li><a href="/login">Log In</a></li>
         {{/if}}
-      </nav>
-    </header>
-    <main>
-      {{{ body }}}
-    </main>
-    <footer>
-      Thanks for visiting!
-    </footer>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    {{{ body }}}
+  </main>
+  <footer>
+    Thanks for visiting!
+  </footer>
   </div>
-  
+
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
