--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,170 +1,358 @@
+:root {
+  --white: #f5f5f5;
+  --dullwhite: #dad4d4;
+  --darkgreen: #6c6ef0;
+  --secondary: #d1dad1;
+  --primary: #1f3270;
+}
+
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.post a {
+  text-decoration: none;
+}
+
+.post a:visited, a:link {
+  color: var(--darkgreen);
+}
+
+body, html {
+  background-color: var(--secondary);
+  color: var(--darkgreen);
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+/* header style */
+header {
+  padding: 20px 15px;
+  background-color: var(--primary);
+  color: var(--white);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+
+header h1 {
+  font-size: 32px;
+  text-align: center;
+}
+
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  padding: 15px;
+  font-size: 20px;
+}
+
+header nav ul li a {
+  padding: 10px 20px;
+  color: var(--white);
+  font-weight: lighter;
+  text-decoration: none;
+}
+
+#logout {
+  background-color: var(--primary);
+  color: var(--white);
+}
+
+header nav ul li a:hover {
+  color: var(--secondary);
+}
+
+.title {
+  display: flex;
+  justify-content: space-around;
+}
+
+/* post-info style */
+.post-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post-body, .posts-list-item, .post-list-item-dashboard {
+  margin: 35px;
+  border: 2px solid var(--darkgreen);
+}
+
+.post {
+  width: 100%;
+  height: 100%;
+}
+
+.post-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--darkgreen);
+  color: var(--dullwhite);
+  font-weight: light;
+  padding: 15px;
+}
+
+.post-body {
+  margin: 8px;
+  font-size: 18px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.post-text {
+  width: 100%;
+}
+
+#btn-post {
+  width: 100%;
+}
+
+.dashboard-list h2 {
+  text-align: center;
+  padding: 8px;
+}
+
+.post-right-container {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+/* comments style */
+.comments {
+  text-align: right;
+  margin: 10px;
+}
+
+.comments-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 25px;
+  border: 1px solid var(--darkgreen);
+}
+
+.comments-header {
+  width: 100%;
+  background-color: var(--darkgreen);
+  color: var(--dullwhite);
+  text-align: left;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.comments-text {
+  text-align: left;
+  padding: 15px;
+  width: 95%;
+  font-size: 18px;
+}
+
+.comments-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  padding: 5px;
+}
+
+#btn-delete-comment {
+  margin-left: 80px;
+  width: 80%;
+}
+
+.comment-user {
+  font-weight: bold;
+}
+
+.comment-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  text-align: center;
+  flex-direction: column;
+}
+
+/* log in and sign up style */
+.account, .create-post {
+  text-align: center;
+  padding: 30px 50px;
+}
+
+.account h2 {
+  margin-bottom: 5px;
+}
+
+.login-form, .signup-form, .new-post-form, .edit-post-form {
+  padding: 10px;
+}
+
+#signup, #login {
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+/* dashboard style */
+#new-post-body {
+  min-width: 60%;
+  min-height: 150px;
+}
+
+#new-post-title {
+  min-width: 60%;
+  margin-bottom: 10px;
+}
+
+#add-new-post {
+  margin-top: 20px;
+  margin-left: 20px;
+  font-size: 18px;
+}
+
+.posts-dashboard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.posts-list-item-dashboard {
+  width: 85%;
+  border: 2px solid var(--darkgreen);
+  margin: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: cetner;
+}
+
+#btn-edit {
+  color: var(--white);
+  text-decoration: none;
+  margin: 3px;
+}
+
+.btn-edit-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#btn-delete-dashboard {
+  margin-left: 5px;
+}
+
+/* modal style */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  align-items: center;
+  background-color: rgba(47, 79, 79, 0.8);
+}
+
+.btn-modal, .comment-modal {
+  display: none;
+}
+
+/* edit post style */
+.edit-post-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+}
+
+.back {
+  margin: 15px;
+  padding: 5px;
+}
+
+.edit-post-form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#edit-post-title {
+  min-width: 400px;
+  min-height: 40px;
+}
+
+#edit-post-body {
+  min-width: 400px;
+  min-height: 150px;
+  align-content: top;
+}
+
+/* utils style */
+.btn {
+  border-radius: 5px;
+  padding: 5px 12px;
+  font-size: 13px;
+  background-color: var(--darkgreen);
+  color: var(--white);
+  margin-top: 8px;
+  font-weight: bold;
+}
+
+.btn:hover {
+  background-color: var(--primary);
+}
+
+textarea, input {
+  padding: 1.1%;
+  border-radius: 5px;
+  border: 1px solid var(--darkgreen);
+  background-color: rgb(166, 235, 166);
+  margin: 3px;
+}
+
+textarea:focus, input:focus {
+  outline: none;
+  border: 1px solid #ffffff;
+  background-color: rgb(166, 235, 166, 0.6);
+}
+
+textarea {
+  min-width: 50%;
+  min-height: 100px;
+}
+
+.btn-no-style {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 100%;
+  font-weight: bold;
+  color: var(--darkgreen);
+}
+
   
-  body, html {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-    color: #333;
-  }
   
-  a {
-    text-decoration: none;
-    color: #225ca3;
-    font-weight: bold;
-    transition: color .1s;
-  }
-  
-  a:hover {
-    color: #3486eb;
-  }
-  
-  button {
-    background-color: #225ca3;
-    border: 0;
-    padding: 1%;
-    color: white;
-    font-weight: bold;
-    transition: background-color .1s;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  button:hover {
-    background-color: #3486eb;
-  }
-  
-  .post-list {
-    margin: 0;
-    padding: 0;
-  }
-  
-  textarea, input {
-    padding: .5%;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  textarea:focus, input:focus {
-    outline: none;
-    border: 1px solid #3486eb;
-  }
-  
-  textarea {
-    min-width: 40%;
-    min-height: 100px;
-  }
-  
-  form > div {
-    margin-bottom: 2%;
-  }
-  
-  form label {
-    display: block;
-  }
-  
-  .wrapper {
-    width: 100%;
-    min-height: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  header {
-    border-bottom: 1px solid #ccc;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 1%;
-  }
-  
-  header h1 {
-    font-size: 1em;
-  }
-  
-  main {
-    flex: 1;
-    padding: 2% 4%;
-  }
-  
-  .btn-no-style {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    text-decoration: none;
-    color: #225ca3;
-    font-size: 100%;
-    font-weight: bold;
-    transition: color .1s;
-    margin-left: 16px;
-  }
-  
-  .btn-no-style:hover {
-    background: none;
-    color: #3486eb;
-  }
-  
-  .delete-post-btn {
-    background-color: #d41414;
-  }
-  
-  .delete-post-btn:hover {
-    background-color: #ff643d;
-  }
-  
-  .post {
-    margin-bottom: 2%;
-    line-height: 150%;
-  }
-  
-  .post .title span {
-    font-style: italic;
-    font-size: 90%;
-    color: #7d7d7d;
-  }
-  
-  .edit-link {
-    display: block;
-    margin: -1.5% 0 2% 0;
-  }
-  
-  
-  .comment-form {
-    margin-bottom: 5%;
-  }
-  
-  .comment {
-    padding: 1%;
-    margin-bottom: 1%;
-  }
-  
-  .comment:nth-child(odd) {
-    background-color: #fff5eb;
-  }
-  
-  .comment .meta {
-    font-size: 90%;
-    margin-bottom: .5%;
-    opacity: .6;
-  }
-  
-  .new-post-form input {
-    width: 300px;
-  }
-  
-  .edit-post-form {
-    margin-bottom: 5%;
-  }
-  
-  footer {
-    border-top: 1px solid #ccc;
-    display: flex;
-    justify-content: center;
-    padding: 1%;
-    font-size: 110%;
-  }
