--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,17 +1,18 @@
-<section>
-  <h2>Create New Post</h2>
-
-  <form class="new-post-form">
-    <div>
-      <label for="post-title">Title</label>
-      <input type="text" id="post-title" name="post-title" />
+<section class="modal">
+  <div class="modal-content">
+    <div class="create-post">
+      <h2>Create New Post</h2>
+      <form class="new-post-form">
+        <div>
+          <input type="text" id="new-post-title" name="new-post-title" placeholder="Title" />
+        </div>
+        <div>
+          <textarea id="new-post-body" name="new-post-body" placeholder="Content"></textarea>
+        </div>
+        <button type="submit" class="btn">Create</button>
+      </form>
     </div>
-    <div>
-      <label for="post-url">Link</label>
-      <input id="post-url" name="post-url" />
-    </div>
-    <button type="submit" class="btn">Create</button>
-  </form>
+  </div>
 </section>
 
 {{#if posts.length}}
@@ -21,7 +22,7 @@
     {{#each posts as |post|}}
     <li>
       {{> post-info post}}
-      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+      <a href="/dashboard/edit/{{post.id}}" class="btn">Edit post</a>
     </li>
     {{/each}}
   </ol>
