--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,21 +1,23 @@
 <article>
   <a href="/dashboard"> &larr; Back to dashboard</a>
-  <h2>
-    Edit Post
-  </h2>
-  <form class="edit-post-form">
-    <div>
-      <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{format_url post.post_url}})</span>
-    </div>
-    <div>
-      {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
-      |
-      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
-    </div>
-    <button type="submit">Save post</button>
-    <button type="button" class="delete-post-btn">Delete post</button>
+  <div class="edit-post-container">
+    <h2>Edit Post</h2>
+    <form class="edit-post-form">
+      <div id="edit-post-title">
+        <input name="edit-post-title" id="edit-post-title" type="text" value="{{post.title}}" />
+      </div>
+      <div class="edit-post-body">
+        <input name="edit-post-body" id="edit-post-body" type="text" value="{{post.post_text}}" />
+      </div>
+      <div>
+        <span>Posted by you on {{format_date post.created_at}}</span>
+      </div>
+      <div class="btn-container"></div>
+      <button type="submit" class="btn btn-post">Save Post</button>
+      <button type="button" class="btn btn-delete">Delete post</button>
+  </div>
   </form>
+  </div>
 </article>
 
 <form class="comment-form">
@@ -24,7 +26,7 @@
   </div>
 
   <div>
-    <button type="submit">add comment</button>
+    <button type="submit" class="btn">add comment</button>
   </div>
 </form>
 
