--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,12 +1,18 @@
-<div class="comments">
-  {{#each this}}
-  <section class="comment">
-    <div class="meta">
-      {{user.username}} on {{format_date created_at}}
-    </div>
-    <div class="text">
-      {{comment_text}}
-    </div>
-  </section>
-  {{/each}}
-</div>
+<section class="comments-container">
+  <div class="comments-header">
+    <h5>Comments</h5>
+  </div>
+  <div class="comments-text">
+    {{#each this}}
+    <section class="comment-list">
+      <div>
+        <span class="comment-user">{{user.username}}</span> on {{format_date created_at}} said {{comment_text}}
+      </div>
+      <div class="text">
+        {{comment_text}}
+      </div>
+    </section>
+    {{/each}}
+    </ul>
+  </div>
+</section>
