--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,19 +1,22 @@
 <section class="modal">
-  <div class="modal-content">
-    <div class="create-post">
-      <h2>Create New Post</h2>
-      <form class="new-post-form">
-        <div>
-          <input type="text" id="new-post-title" name="new-post-title" placeholder="Title" />
+    <div class="modal-content">
+        <div class="create-post">
+            <h2>Create New Post</h2>
+            <form class = "new-post-form">
+                <div>
+                    <input type="text" id="new-post-title" name="new-post-title" placeholder="Title" />
+                </div>
+                <div>
+                    <textarea id="new-post-body" name="new-post-body" placeholder="Content"></textarea>
+                </div>
+                <button type="submit" class="btn">Publish</button>
+                <button type="button" id="btn-close" class="btn btn-close">Close</button>
+            </form>
         </div>
-        <div>
-          <textarea id="new-post-body" name="new-post-body" placeholder="Content"></textarea>
-        </div>
-        <button type="submit" class="btn">Create</button>
-      </form>
     </div>
-  </div>
 </section>
+
+<button type="submit" id="add-new-post" class="btn">Write New Blog Post</button>
 
 {{#if posts.length}}
 <section>
