fixed add button

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
-<section class="modal">
-    <div class="modal-content">
+<section >
+    <div>
         <div class="create-post">
             <h2>Create New Post</h2>
             <form class = "new-post-form">
@@ -10,13 +10,10 @@
                     <textarea id="new-post-body" name="new-post-body" placeholder="Content"></textarea>
                 </div>
                 <button type="submit" class="btn">Publish</button>
-                <button type="button" id="btn-close" class="btn btn-close">Close</button>
             </form>
         </div>
     </div>
 </section>
-
-<button type="submit" id="add-new-post" class="btn">Write New Blog Post</button>
 
 {{#if posts.length}}
 <section>
